--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
   <title>Struttura Discord</title>
 </head>
 <body>
+  <header>
 
+    <div class="container">
+
+      <div class="logo">
+        <span>LOGO</span>
+      </div>
+  
+      <nav>
+        <ul>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+        </ul>
+      </nav>
+  
+      <div class="login">
+        <a href="#">Login</a>
+      </div>
+
+    </div>
+
+  </header>
+
+  <main>
+
+    <div class="jumbotron">
+    
+    </div>
+   
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
