--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 
   <main>
 
-    <div class="jumbotron">
-    
-    </div>
+    <section>
+      <div class="jumbotron">
+
+      </div>
+    </section>
    
   </main>
 
