--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <div class="row">
+
+        </div>
+        <div class="row">
+        
+        </div>
+        <div class="row">
+        
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer>
