--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
   </header>
 
+  <div class="jumbotron">
+    <div class="content">
+      
+    </div>
+  </div>
+
   <main>
 
-    <section>
-      <div class="jumbotron">
-
-      </div>
-    </section>
-    
     <section>
       <div class="row container">
         <div class="col-img">
